@@ -1,3 +1,9 @@
+2011-09-22  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/random.c 	(ROTATE): Remove.
+	(SHIFT_RIGHT): New.
+	(ep_add): Use SHIFT_RIGHT.
+
 2011-09-21  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/random.c (ep_output): Bug fix for second argument of
